# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  23 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> bin/dispatch-conf:
  Removed the -a argument from all diff usage.

  21 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage_const.py:
  Adding prerm and postrm to EBUILD_PHASES so logging works there too.
  
  21 Mar 2005; Marius Mauch <genone@gentoo.org> bin/ebuild-functions.sh:
  Force the copy by removing the destination first in econf/autoconfig,
  prevents sandbox violations by libtoolize calls without --copy.

  15 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/cache/*;
  Cache updates moving _eclasses_ handling up into the template layer, 
  added delayed sync'ing support (see database.autocommit) which is relevant 
  for rdbms backends.

  13 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage_dep.py:
  Addded a traversed cache dict to __traversed per call, the slowdown was 
  pointed out by Thomas de Grenier de Latour (TGL).  56s, to ~6s.  Probably 
  should be using a dict for traversed, but is dependant on whether the returned
  list is order, or can be random.

  10 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
  fix breakage wrt portage_const.EBUILD_PHASES

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> bin/emerge:
  emerge --metadata can now be ran by non-root users.

  09 Mar 2005: Brian Harring <ferringb@gentoo.org> pym/ebuild.py, bin/emerge:
  Don't set 02775 on depcache_dir.
  Ever.
  If the cache backend is stupid and can't get the perms right, fix the backend.

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/cache/fs_template.py:
  _ensure_dirs didn't account for umask.
